# Mandelbrot-Fractal

./: CMakeLists.txt
rapport/: Makefile  rapport.tex
src/: bench.cpp  render.cpp  render.hpp  view.cpp
